--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "serve": "live-server public/",
     "build": "webpack --watch",
-    "build-babel": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch"
+    "build-babel": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch",
+    "dev-server": "webpack-dev-server"
   },
   "dependencies": {
     "babel-cli": "6.26.0",
@@ -19,6 +20,7 @@
     "react": "16.0.0",
     "react-dom": "16.0.0",
     "validator": "^9.4.1",
-    "webpack": "3.1.0"
+    "webpack": "3.1.0",
+    "webpack-dev-server": "2.5.1"
   }
 }
