--- a/package.json
+++ b/package.json
@@ -14,11 +14,17 @@
     "babel-cli": "6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "0.28.4",
     "live-server": "^1.2.0",
+    "node-sass": "4.5.3",
     "react": "16.0.0",
     "react-dom": "16.0.0",
+    "react-modal": "2.2.2",
+    "sass-loader": "6.0.6",
+    "style-loader": "0.18.2",
     "validator": "^9.4.1",
     "webpack": "3.1.0",
     "webpack-dev-server": "2.5.1"
